--- a/frontend/app.json
+++ b/frontend/app.json
@@ -14,7 +14,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#181a1b"
       },
       "edgeToEdgeEnabled": true
     },
@@ -22,6 +22,11 @@
       "bundler": "metro",
       "output": "static",
       "favicon": ""
+    },
+    "expo": {
+      "splash": {
+        "backgroundColor": "#181a1bd"
+      }
     },
     "plugins": [
       "expo-router",
@@ -31,7 +36,7 @@
           "image": "",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#181a1b"
         }
       ]
     ],
