Added multi platform storage compatibility and login redirection

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -38,7 +38,8 @@
           "resizeMode": "contain",
           "backgroundColor": "#181a1b"
         }
-      ]
+      ],
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
