--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,7 +44,9 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "expo-location": "~18.1.6",
+    "react-native-maps": "1.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
